--- a/landmarks.html
+++ b/landmarks.html
@@ -12,7 +12,7 @@
 <body> 
 <div id="top-bar">&nbsp; </div>
 <div class="page_wrapper">
-	<div id="header">
+	<div id="header" role="banner">
 		<div id="course_title_container" style="left:1em;">		
 			<h1 id="section-title">Our Community Website</h1>
 		</div>
@@ -32,8 +32,10 @@
 		</div> 
 	</div>
 
-	<div class="logoutbar">&nbsp; <input type="text" class="input"><input type="submit" value="search"></div>
-	<div class="crumbcontainer" role="search">
+	<div class="logoutbar">&nbsp; <input type="text" class="input"><input role="search" type="submit" value="search">
+		
+	</div>
+	<div class="crumbcontainer">
 			<div id="breadcrumbs" tabindex="0" aria-label="breadcrumb links">&nbsp;</div>
 	</div>
 	<div id="contentwrapper">
@@ -44,7 +46,7 @@
 					<br/>
 					<h2 class="box"><span>Networking</span></h2>
 					<div class="box" id="menu_Networking">
-						<ul class="social_side_menu" role="banner">
+						<ul class="social_side_menu" role="navigation">
 							<li><a href="" class="fake">My Network</a></li>
 							<li><a href="" class="fake">My Contacts</a></li>
 							<li><a href="" class="fake">Network Profile</a></li>
