--- a/landmarks.html
+++ b/landmarks.html
@@ -57,12 +57,14 @@
 						<div class="divider"></div>
 					</div>
 				<br/>
-					<h2 class="box"><span>People Online</span></h2>
-					<div role="complementary" id="menu_UsersOnline">
+				<div role="complementary" aria-labelledby="peopletitle">
+					<h2 id="peopletitle" class="box"><span>People Online</span></h2>
+					<div  id="menu_UsersOnline">
 						<ul style="padding: 0px; list-style: none;">
 							<li style="padding: 3px 0px;" id="mylogin">No one logged in</li>
 						</ul>
 					</div>
+				</div>
 				<br/>
 				</div>
 			</div>
