--- a/accordion.html
+++ b/accordion.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-	<head>
+	<head role="heading">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>IK Library: Accordion</title>
@@ -26,13 +26,16 @@
 			<a href="index.html">&larr; Index</a>
 			<h1>Accordion</h1>
 			<h2>autoCollapse = false</h2>
-			<dl class="multiselect">
-				<dt>Accordion panel</dt>
-				<dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur erat purus, nec molestie metus molestie at. Aliquam lobortis ipsum nec sapien auctor, ut pharetra erat sollicitudin. Ut nulla nunc, suscipit eget ante et, egestas pharetra odio. Sed sed varius massa. Integer sed volutpat leo.</dd>
-				<dt>Accordion panel</dt>
-				<dd>Vestibulum feugiat nibh enim, sed accumsan ante cursus sit amet. Nam metus est, rutrum vitae nibh ut, consectetur ultrices lacus. Duis a aliquam tortor, eget viverra elit. Vivamus vitae dui in ex sagittis hendrerit.</dd>
-			</dl>
+			<div tabindex="0" aria-multiselectable ="true">
+				<dl class="multiselect">
+					<dt>Accordion panel</dt>
+					<dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur erat purus, nec molestie metus molestie at. Aliquam lobortis ipsum nec sapien auctor, ut pharetra erat sollicitudin. Ut nulla nunc, suscipit eget ante et, egestas pharetra odio. Sed sed varius massa. Integer sed volutpat leo.</dd>
+					<dt>Accordion panel</dt>
+					<dd>Vestibulum feugiat nibh enim, sed accumsan ante cursus sit amet. Nam metus est, rutrum vitae nibh ut, consectetur ultrices lacus. Duis a aliquam tortor, eget viverra elit. Vivamus vitae dui in ex sagittis hendrerit.</dd>
+				</dl>
+			</div>
 			<h2>autoCollapse = true</h2>
+			<div  tabindex="0" aria-multiselectable ="false"></div>
 			<dl class="singleselect">
 				<dt>Accordion panel</dt>
 				<dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur erat purus, nec molestie metus molestie at. Aliquam lobortis ipsum nec sapien auctor, ut pharetra erat sollicitudin. Ut nulla nunc, suscipit eget ante et, egestas pharetra odio. Sed sed varius massa. Integer sed volutpat leo.</dd>
