--- a/sortable.html
+++ b/sortable.html
@@ -24,15 +24,15 @@
 			<h1>Sortable List</h1>
 			<p>Lorem ipsum dolor sit, consectetur adipiscing elit. Sed blandit pellentesque felis eget venenatis. Duis venenatis consectetur lacinia. Proin elementum eu justo vel dignissim.</p>
 			<ul class="list">
-				<li>Apples</li>
-				<li>Oranges</li>
-				<li>Bananas</li>
-				<li>Pears</li>
-				<li>Plums</li>
-				<li>Peaches</li>
-				<li>Cherries</li>
-				<li>Persimmons</li>
-				<li>Quinces</li>
+				<li tabindex="0" aria-label="Apples">Apples</li>
+				<li tabindex="0" aria-label="Oranges">Oranges</li>
+				<li tabindex="0">Bananas</li>
+				<li tabindex="0">Pears</li>
+				<li tabindex="0">Plums</li>
+				<li tabindex="0">Peaches</li>
+				<li tabindex="0">Cherries</li>
+				<li tabindex="0">Persimmons</li>
+				<li tabindex="0">Quinces</li>
 			</ul>
 		</main>
 	</body>
